# Mithl-OS

./: .gitignore  Makefile  README.md  build.sh  build_log_libc.txt  build_log_libc_2.txt  build_log_wi.txt  contribute.html  convert_icon.py  create_bmp_icons.py  deploy_tcc.sh  doom_icon_data.txt  extract_cursor.py  features.html  fix_git_size.sh  generate_fallbacks.py  generate_kora_placeholders.py  index.html  style.css  test_svg.py
boot/: boot.asm
desktop_env/: compositor.c
dock/mcOS-BS-White/: cairo-dock.conf  preview  readme
docs_extracted/docs/: features.html  style.css
kernel/: acpi.c  ata.c  boot_adapter.c  console.c  desktop_impl.c  elf_loader.c  filesystem.c  gdt.c  gdt_flush.asm  graphics.c  gui.c  gui_dialog.c  hal_test.c  idt.c  input.c  interrupts.asm  kernel.c  keyboard.c  memory.c  nuklear_impl.c  pipe.c  pit.c  power.asm  process.c  ramfs.c  rtc.c  spinlock.c  string.c  syscall.c  test_ui.c  theme.c  vfs.c  vfs_polaris.c  wm.c
kernel/drivers/: video.c
kernel/graphics/: triangle.c
kernel/include/: app_icons.h  ata.h  boot_adapter.h  boot_info.h  bootlogo.h  console.h  desktop.h  elf.h  (+23 more)
legacy/: Makefile_v1  build_log.txt
legacy/kernel_v1/rust/: Cargo.toml
legacy/kernel_v1/rust/src/: lib.rs
linker/: linker.ld
scripts/: build_iso.sh
sysroot/: hello.c
tools/: convert_icons.py  convert_wallpaper.py  extract_cursor.py  gen_app_icons.py  gen_sf_font.py  gen_wallpaper.py  generate_kora_icons.py  icon_gen.py  image_to_header.py  logo_to_header.py  make_logo.py
userspace/: build.sh  build_tcc.sh  linker.ld
windowmanager/: mithl_wm.c
(+216 files in other folders)
